B10: Các thành phần còn lại của angular js

--- a/GD2_AngularJS/B7_B8_SPA/src/pages/trang-chu.html
+++ b/GD2_AngularJS/B7_B8_SPA/src/pages/trang-chu.html
@@ -10,3 +10,16 @@
     <td>{{thucVat.gioiTinh}}</td>
   </tr>
 </table>
+<p>Dong Vat</p>
+<table>
+  <tr>
+    <th>ID</th>
+    <th>Ten</th>
+    <th>Gioi tinh</th>
+  </tr>
+  <tr ng-repeat="thucVat in danhSachDongVat">
+    <td>{{thucVat.id}}</td>
+    <td>{{thucVat.ten}}</td>
+    <td>{{thucVat.gioiTinh}}</td>
+  </tr>
+</table>
